[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=2]
[ext_resource path="res://Source/Gameplay/HUD/JoinCodeMenu.gd" type="Script" id=3]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/Menu/HMenu.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 1 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.392157 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.117647, 0.117647, 0.117647, 0.392157 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.137255, 0.137255, 0.137255, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="JoinCodeMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -140.0
margin_right = 224.0
margin_bottom = 140.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="ColorRect" parent="Background/Info"]
margin_right = 448.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Background/Info"]
margin_top = 9.0
margin_right = 448.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Join with Code"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid2" type="ColorRect" parent="Background/Info"]
margin_top = 62.0
margin_right = 448.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Info"]
margin_top = 71.0
margin_right = 448.0
margin_bottom = 131.0
custom_constants/separation = 20

[node name="MarginLeft" type="Label" parent="Background/Info/HBoxContainer"]
margin_top = 11.0
margin_bottom = 48.0

[node name="Code" type="Label" parent="Background/Info/HBoxContainer"]
margin_left = 20.0
margin_right = 204.0
margin_bottom = 60.0
rect_min_size = Vector2( 184, 60 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "CODE"
align = 1
valign = 1

[node name="MarginLeft2" type="Label" parent="Background/Info/HBoxContainer"]
margin_left = 224.0
margin_top = 11.0
margin_right = 224.0
margin_bottom = 48.0

[node name="LobbyCode" type="LineEdit" parent="Background/Info/HBoxContainer"]
margin_left = 244.0
margin_right = 428.0
margin_bottom = 60.0
rect_min_size = Vector2( 184, 60 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
align = 1

[node name="MarginRight" type="Label" parent="Background/Info/HBoxContainer"]
margin_left = 448.0
margin_top = 11.0
margin_right = 448.0
margin_bottom = 48.0

[node name="MarginMid4" type="ColorRect" parent="Background/Info"]
margin_top = 135.0
margin_right = 448.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/Info"]
margin_top = 144.0
margin_right = 448.0
margin_bottom = 204.0
custom_constants/separation = 20

[node name="MarginLeft" type="Label" parent="Background/Info/HBoxContainer2"]
margin_top = 11.0
margin_bottom = 48.0

[node name="Pass" type="Label" parent="Background/Info/HBoxContainer2"]
margin_left = 20.0
margin_right = 204.0
margin_bottom = 60.0
rect_min_size = Vector2( 184, 60 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "PASS"
align = 1
valign = 1

[node name="MarginLeft2" type="Label" parent="Background/Info/HBoxContainer2"]
margin_left = 224.0
margin_top = 11.0
margin_right = 224.0
margin_bottom = 48.0

[node name="LobbyPass" type="LineEdit" parent="Background/Info/HBoxContainer2"]
margin_left = 244.0
margin_right = 428.0
margin_bottom = 60.0
rect_min_size = Vector2( 184, 60 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
align = 1

[node name="MarginRight" type="Label" parent="Background/Info/HBoxContainer2"]
margin_left = 448.0
margin_top = 11.0
margin_right = 448.0
margin_bottom = 48.0

[node name="MarginMid5" type="ColorRect" parent="Background/Info"]
margin_top = 208.0
margin_right = 448.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HMenu3" parent="Background/Info" instance=ExtResource( 6 )]
margin_top = 217.0
margin_right = 448.0
margin_bottom = 277.0

[node name="MarginLeft" type="Label" parent="Background/Info/HMenu3"]
margin_top = 11.0
margin_bottom = 48.0

[node name="Cancel" parent="Background/Info/HMenu3" instance=ExtResource( 5 )]
margin_left = 20.0
margin_right = 204.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "BACK"
flat = true

[node name="MarginRight" type="Label" parent="Background/Info/HMenu3"]
margin_left = 224.0
margin_top = 11.0
margin_right = 224.0
margin_bottom = 48.0

[node name="Join" parent="Background/Info/HMenu3" instance=ExtResource( 5 )]
margin_left = 244.0
margin_right = 428.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "JOIN"
flat = true

[node name="MarginRight2" type="Label" parent="Background/Info/HMenu3"]
margin_left = 448.0
margin_top = 11.0
margin_right = 448.0
margin_bottom = 48.0

[node name="MarginBottom" type="ColorRect" parent="Background/Info"]
margin_top = 281.0
margin_right = 448.0
margin_bottom = 286.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Background/Info/HMenu3/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Background/Info/HMenu3/Join" to="." method="_on_Join_pressed"]
